--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">  
+    <meta charset="utf-8" />
     <title>Text To Speech | Hisrahel</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-
-    
     <div class="wrapper">
-        <p class="day">Instruction: Type any word, phrase or sentence in the text area below, click on convert to speech and wait for the voice over.
-            <br><br>
+      <p class="day">
+        Instruction: Type any word, phrase or sentence in the text area below,
+        click on convert to speech and wait for the voice over. <br /><br />
 
         You can also select the voices you want below.
-        </p>
-      <header>Text To Speech made by Hisrahel </header>
+      </p>
+      <header>Text To Speech made by Hisrahel</header>
       <form action="#">
         <div class="row">
           <label>Enter Text</label>
@@ -29,15 +28,13 @@
         </div>
         <button>Convert To Speech</button>
       </form>
-      
-    <p class="day">
-        Twitter: dauntless121 <br>
+
+      <p class="day">
+        Twitter: dauntless121 <br />
         Whatsapp: +2348180980419
-    </p>
+      </p>
     </div>
 
-
     <script src="app.js"></script>
-
   </body>
 </html>
